--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 
 
 /* Tools Start */
+
+.text-yellow {
+    font-size: 20px;
+    color: var(--yellow);
+}
+
+
 .single-team-member {
     cursor: pointer !important;
 }
@@ -68,6 +75,12 @@ ul .li::before {
     grid-template-areas:
         "header-text"
         "header-form"
+}
+
+.header-form input,
+.header-form textarea {
+    border-radius: 20px;
+    background-color: #E5E5E5;
 }
 
 
@@ -130,10 +143,11 @@ ul .li::before {
     object-fit: cover;
     z-index: -100;
 }
+
 .hero-content {
     display: grid;
     grid-template-areas:
-    "header-text header-form";
+        "header-text header-form";
 }
 
 
@@ -147,11 +161,17 @@ ul .li::before {
 }
 
 /* Responsive */
-@media (min-width:1280px ) and (max-width:1330px) {
+@media (min-width: 1280px) {
+    .hero-content {
+        width: 85%;
+        margin-left: 50px;
+    }
+}
+@media (min-width:1280px) and (max-width:1330px) {
     .hero-content {
         grid-template-areas:
-        "header-text header-form";
-        transform: translate(4rem,5rem) !important;
+            "header-text header-form";
+        transform: translate(4rem, 5rem) !important;
     }
 }
 
@@ -272,11 +292,13 @@ ul .li::before {
 
 
 .about-us-img {
-    border: 4px solid;
+    background-color: #CEDEE5;
+    /* border: 4px solid #CEDEE5; */
     border-radius: 10px;
 }
 
 .about-us-img img {
+    border: 4px solid #CEDEE5;
     border-radius: 10px;
 }
 
@@ -288,6 +310,15 @@ ul .li::before {
 
     justify-content: center;
     align-items: center;
+}
+
+.popular-cards .card-body::before {
+    content: "";
+    border: 5px solid var(--yellow);
+    position: absolute;
+    left: 0;
+    top: 65%;
+    width: 100%;
 }
 
 
@@ -445,7 +476,15 @@ ul .li::before {
     position: relative;
     /* background-color: goldenrod; */
 }
-
+.study-img:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(to top, rgba(1, 86, 125, .3), rgba(1, 86, 125, .3));
+}
 .study-card-1 {
     width: 300px;
     height: 400px;
@@ -653,7 +692,7 @@ ul .li::before {
     }
 }
 
-@media(max-width:390px){
+@media(max-width:390px) {
     .teams {
         padding: 30px;
     }
@@ -752,7 +791,7 @@ ul .li::before {
     }
 }
 
-@media (max-width:414px ) {
+@media (max-width:414px) {
     .slide-text p {
         bottom: 70% !important;
         left: 25% !important;
