--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ ul .li::before {
 
 .hero-area {
     min-height: auto;
-    /* height: 800px !important; */
+    height: 750px !important;
 }
 
 .header-info {
@@ -126,9 +126,10 @@ ul .li::before {
 
 }
 
-.hero-area .single-slide::before {
+.hero-area::before {
     content: "";
     position: absolute;
+    height: 750px;
     top: 0;
     right: 0;
     left: 0;
@@ -139,7 +140,7 @@ ul .li::before {
 
 .myVideo {
     width: 100%;
-    height: 900px;
+    height: 750px;
     object-fit: cover;
     z-index: -100;
 }
@@ -820,6 +821,9 @@ ul .li::before {
 
 /* Footer start*/
 @media (max-width: 480px) {
+    .newsletter-text {
+        justify-content: center;
+    }
     .single-footer-widget a img {
         width: 150px !important;
     }
